# rustrt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
rustrt-base/src/: main.rs
rustrt-base/src/core/: ray.rs
rustrt-base/src/materials/: diffuse_light.rs  fresnel_blend.rs  mod.rs  phong.rs
rustrt-base/src/samplers/: independent.rs
rustrt-base/src/surfaces/: mod.rs  sphere.rs  (+1 more)
rustrt-dod/: Cargo.toml
scenes/: 06_jensen_box.json  ajax-normals.json  ajax-textured.json  ajax-white.json  ajax.json  buddha-box.json  bunny-dragons.json  earth.json  jensen_box_mis.json  loewenfeld-textured.json  loewenfeld-white.json  marble.json  nefertiti-textured.json  nefertiti-white.json  odyssey_mats.json  odyssey_mis.json  odyssey_triangle_mats.json  odyssey_triangle_mis.json  odyssey_triangle_nee.json  simple-geometry.json  sponza-buddha.json  sponza.json  teapot.json  veach_mats.json  veach_mis.json  veach_mixture.json  veach_nee.json  veach_nee_original.json
scenes/assignment1/: 02_balls.json  05_quad-light.json
scenes/assignment2/: buddha-box.json  loewenfeld-in-box.json  simple-geometry.json
scenes/assignment3/: ajax-textured.json  checker.json  fresnel_blend.json  loewenfeld-textured.json  nefertiti-textured.json  textured-box.json
scenes/assignment4/: ajax-ao.json  veach_mats.json
scenes/assignment5/: jensen_box_mats.json  jensen_box_mis.json  jensen_box_nee.json  odyssey_nee.json  test_surfaces.json  veach_mis.json  veach_mixture.json  veach_nee.json
src/: aabb.rs  box3.rs  camera.rs  example_scenes.rs  hit.rs  image.rs  image2d.rs  lib.rs  main.rs  main2.rs  main_pp.rs  material.rs  materials.rs  onb.rs  ray.rs  sampling.rs  scene.rs  sphere.rs  surface.rs  surfaces.rs  testing.rs  textures.rs  transform.rs  tuto0.rs  tuto1.rs  utils.rs
src/core/: aabb.rs  camera.rs  image2d.rs  mod.rs  onb.rs  ray.rs  sampling.rs  scene.rs  transform.rs  utils.rs
src/integrators/: ambiant_occlusion.rs  integrator.rs  mod.rs  normals.rs  path_tracer_mats.rs  path_tracer_mis.rs  path_tracer_nee.rs
src/materials/: blinn_phong.rs  dielectric.rs  diffuse_light.rs  factory.rs  fresnel_blend.rs  lambertian.rs  material.rs  metal.rs  mod.rs  phong.rs
src/samplers/: independent.rs  mod.rs  sampler.rs
src/surfaces/: accelerators.rs  bvh.rs  factory.rs  mod.rs  quad.rs  sphere.rs  surface.rs  surface_group.rs  triangle.rs
src/tests/: mod.rs  sample_test.rs
src/textures/: checker.rs  constant.rs  image.rs  marble.rs  mod.rs  perlin.rs  texture.rs
tests/: tuto0.rs  tuto1.rs
(+4 files in other folders)
