[package]
name = "rustrt"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version ="0.32", features = ["serde-serialize"]}
nalgebra-glm = "0.18"
rand = "0.8"
clap = { version = "4.1", features = ["derive"] } 
serde = "1.0"
serde_json = "1.0"
image = "0.24"
enum_dispatch = "0.3" # maybe change for  enum_delegate
indicatif = "0.17"
tobj = "3.2"
approx = "0.5"
partition = "0.1"
lazy_static = "1.4"
rayon = "1.6"
rand_chacha = "0.3"

[profile.dev]
opt-level = 3 # otherwise it takes forever

[profile.test]
opt-level = 3 # otherwise sampling tests take forever

[profile.release]
# debug = true # for profiling
strip = "symbols" # for smaller executable
