[package]
name = "rustrt"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version ="0.33", features = ["serde-serialize"]}
nalgebra-glm = "0.19"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
image = "0.25"
enum_dispatch = "0.3" # maybe change for  enum_delegate
indicatif = "0.17"
tobj = "4.0"
approx = "0.5"
partition = "0.1"
lazy_static = "1.5"
rayon = "1.10"
rand_chacha = "0.3"
itertools = "0.13"

[profile.dev]
opt-level = 3 # otherwise it takes forever
incremental = true
codegen-units = 512

[profile.test]
opt-level = 3 # otherwise sampling tests take forever

[profile.release]
# debug = true # for profiling
strip = "symbols" # for smaller executable
